style.css
/* ... */
div.latest-post {
    background-color: lightgray;
    width: 42%;
    padding: 13px;
    float: left;
    height: 200px;
    text-overflow: ellipsis;
    overflow: hidden;
    margin-bottom: 10px;
}
div.latest-post:nth-child(odd) {
    margin-right: 10px;
}
div.latest-post h1 {
    font-size: 13px;
    line-height: 17px;
    color: white;
    background-color: black;
    padding: 2px 5px;
    display: inline-block;
}
div.latest-post h1:hover {
    background-color: yellow;
    color: black;
}
div.latest-post a {
    text-decoration: none;
    background-color: inherit;
}
div.latest-post a:hover {
    color: black;
}
/* BLOG-BAR */
ul#blog-bar {
    width: 44em;
    margin-top: 13px;
}
ul#blog-bar li.archive-list {
    width: 20%;
    float: left;
    background-color: Yellow;
    padding: 7px 0;
    /*text-align: center;*/
}
ul#blog-bar li.archive-list ul {
}

ul#blog-bar li.archive-list ul#last-posts {
    padding: 13px;
    width: 100%;
    -moz-column-count: 2;
    -moz-column-gap: 13px;
    /*-moz-column-rule: 1px dotted black;*/
    -webkit-column-count: 2;
    -webkit-column-gap: 13px;
    /*-webkit-column-rule: 1px dotted black;*/
    column-count: 2;
    column-gap: 13px;
    /*column-rule: 1px dotted black;*/
}
ul#blog-bar li.archive-list ul#archive {
    padding: 13px 6px 13px 13px;
    width: 75%;
    -moz-column-count: 4;
    -moz-column-gap: 13px;
    -webkit-column-count: 4;
    -webkit-column-gap: 13px;
    column-count: 4;
    column-gap: 13px;
}
/*ul#blog-bar li.archive-list ul#categories {
    padding: 13px 0 13px 13px;
    width: 50%;
}*/
#archives-3 .widget-title {padding-left: 17px}
.textwidget{padding-left:20px}
ul#blog-bar li.archive-list h4 {
    margin-left: 13px;
}
ul#blog-bar li ul {
    display: none;
    position: absolute;
    bottom: -13px;
    width: 30%;
}
ul#blog-bar li:hover ul {
    display: block;
    background-color: yellow;
}
ul#blog-bar li.archive-list ul li {
    text-indent: -13px;
    margin-left: 13px;
}

/* MENU */
div#nav {
    text-align: center;
    width: 185px;
    position: static;
    margin-top: -3em;
    float: left;
}

div#logo{
    position: relative;
    display:block;
}


div#nav div#logo img:hover{
    z-index:3000;
}

div#nav nav#menu {
    font-size: 16px;
    margin-left: 20px;
    line-height: 20px;
    margin-top: 0px;
    padding: 0px;
    font-weight: bold;
}
div#nav nav#menu li:before {
    content: "";
}
div#nav nav#menu a {
    text-decoration: none;
    padding: 0 6px 1px;
    background-color: #FFAA96;
}
div#nav nav#menu a.active {
    background-color: yellow;
}
div#nav nav#menu a:hover, div#nav nav#menu li.active a {
    background-color: yellow;
    color: black;
}
div#nav nav#menu a#popup {
    font-size: 13px;
}
div#nav input[type=text] {
    border: 1px solid #FFAA96;
    width: 8em;
    height: 17px;
    padding: 0;
    float: none;
    background-color: white;
    clear: both;
    display: inline-block;
    max-width: 100%;
}
div#nav input[type=submit] {
    background-color: white;
    border: none;
    border-bottom: 1px solid black;
    padding: 0;
    float: none;
    clear: both;
    display: inline-block;
}
div#nav input[type=submit]:hover {
    background-color: black;
}

div#nav nav#menu a#player {
    background: none;
    display: block;
    height: 17px;
    width: 135px;
    padding: 0;
    margin-top: 5px;
    margin-left: 13px;
/*    display: none;*/
}
div#nav nav#menu div#le-son-du-mois {
    background-color: black;
    color: white;
    padding: 2px 5px;
    padding-top: 6px;
    text-transform: uppercase;
    margin: auto;
    margin-top: 13px;
    width: 39%;
    font-size: 13px;
    line-height: 17px;
}
div#nav nav#menu img#launcher {
    cursor: pointer;
    margin: 13px auto 7px auto;
    display: block;
    cursor: pointer;
}

div#nav nav#menu div#audio-title {
    background-color: yellow;
    font-size: 13px;
    display: inline;
    padding: 3px 2px;
}
div#audio-title a {
    padding: 2px 5px;
}
div#nav nav#menu div#languages {
    margin-top: 13px;
    font-size: 9px;
}
div#nav nav#menu div#languages li {
    display: inline;
    margin-right: 4px;
}
div#nav nav#menu div#languages a {
    padding: 2px 4px 1px 2px;
}


/* FOOTER */
div#footer {
    clear: both;
    font-size: 9px;
}

div#footer * {
    display: inline;
}


/* À PROPOS DE NOUS */
#post-4461 {
    background-color: yellow;
    min-height: 17px;
}
#post-4461 h1 {
    font-size: 13px;
    line-height: 17px;
    display: inline;
    float: left;
    margin-right: 5px;
    font-weight: normal;
}
#post-4461 h1 a:after {
    content: ": ";
}
#post-4461 h1 a {
    text-decoration: none;
}
#newsletter-bt {
    display: inline;
}
#newsletter-bt form {
    display: none;
    padding-top: 13px;
}


/* SEARCH RESULTS */
body.search-results article.production {
    background-color: yellow;
}

@media print {
    @page {
        size: 21cm 29,7cm;
        margin: 0;
    }
}
ul#resort{margin-bottom:1em}
#thematiques select {border: 0; padding:3px;
    margin: 0;
    background: #FFFFC0;
    border:none;
    border-bottom:solid 1px black;
    outline:none;
    display: inline-block;
    -webkit-appearance:none;
    -moz-appearance:none;
    appearance:none;
    cursor:pointer;
    padding-left:0px;
}

